<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/liight_gray"
    android:padding="20dp"
    tools:context=".ui.main.MainFragment">


    <TextView
        android:id="@+id/appbar_txt"
        style="@style/MainTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/breaking_news" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_txt">

        <ImageView
            android:id="@+id/refresh_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/refresh"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/refresh_news" />

        <SearchView
            android:id="@+id/search_main"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:queryHint="@string/find"
            android:queryBackground="@android:color/transparent"
            android:iconifiedByDefault="false"
            android:theme="@style/MyActionBarWidgetTheme"
            android:searchIcon="@drawable/search_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/refresh_icon"
            app:layout_constraintEnd_toStartOf="@+id/favorite_icon"
            android:background="@drawable/search_back"/>

        <ImageView
            android:id="@+id/favorite_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/favorite_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/favorite_news" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_news_rv"
        style="@style/RecyclerStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        tools:listitem="@layout/news_item"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>