<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/liight_gray"
    android:padding="20dp"
    tools:context=".ui.favorite.SavedFragment">

   <ImageView
       android:id="@+id/back_icon"
       android:layout_width="30dp"
       android:layout_height="30dp"
       android:src="@drawable/arrow_back"
       android:contentDescription="@string/icon_back"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="@id/appbar_txt" />

    <TextView
        android:id="@+id/appbar_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/dark_blue_txt"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/saved_news" />

        <SearchView
            android:id="@+id/search_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:queryHint="@string/find"
            android:queryBackground="@android:color/transparent"
            android:iconifiedByDefault="false"
            android:layout_marginTop="10dp"
            android:theme="@style/MyActionBarWidgetTheme"
            android:searchIcon="@drawable/search_24"
            app:layout_constraintTop_toBottomOf="@id/appbar_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/search_back"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorite_news"
        style="@style/RecyclerStyle"
        app:layout_constraintTop_toBottomOf="@+id/search_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/news_item"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>